@@ -1,5 +1,5 @@
-# dup2.m4 serial 2
-dnl Copyright (C) 2002 Free Software Foundation, Inc.
+#serial 3
+dnl Copyright (C) 2002, 2005 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
 dnl with or without modifications, as long as this notice is preserved.
@@ -14,5 +14,5 @@ AC_DEFUN([gl_FUNC_DUP2],
 
 # Prerequisites of lib/dup2.c.
 AC_DEFUN([gl_PREREQ_DUP2], [
-  AC_CHECK_HEADERS_ONCE(fcntl.h unistd.h)
+  AC_CHECK_HEADERS_ONCE(unistd.h)
 ])
