@@ -1,4 +1,4 @@
-#serial 9
+#serial 10
 # Check for several getcwd bugs with long file names.
 # If so, arrange to compile the wrapper function.
 
@@ -16,7 +16,6 @@
 AC_DEFUN([gl_FUNC_GETCWD_PATH_MAX],
 [
   AC_CHECK_DECLS_ONCE(getcwd)
-  AC_CHECK_HEADERS_ONCE(fcntl.h)
   AC_REQUIRE([gl_USE_SYSTEM_EXTENSIONS])
   AC_CACHE_CHECK([whether getcwd handles long file names properly],
     gl_cv_func_getcwd_path_max,
@@ -32,9 +31,7 @@ AC_DEFUN([gl_FUNC_GETCWD_PATH_MAX],
 #include <limits.h>
 #include <sys/stat.h>
 #include <sys/types.h>
-#if HAVE_FCNTL_H
-# include <fcntl.h>
-#endif
+#include <fcntl.h>
 
 #ifndef AT_FDCWD
 # define AT_FDCWD 0
