@@ -63,6 +63,5 @@ AC_DEFUN([gl_PREREQ_GETCWD],
   AC_REQUIRE([gl_USE_SYSTEM_EXTENSIONS])
   AC_REQUIRE([AC_HEADER_DIRENT])
   AC_REQUIRE([gl_CHECK_TYPE_STRUCT_DIRENT_D_INO])
-  AC_CHECK_HEADERS_ONCE(fcntl.h)
   :
 ])
