@@ -8,7 +8,7 @@
 # Generated by gnulib-tool.
 #
 # Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname error exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep lstat strerror vasprintf malloc realloc strftime xsize getpagesize md5 stdint yesno allocsa setenv getdate readlink xreadlink xgethostname mkdir rename dup2 strstr ftruncate strtoul pathmax xalloc-die pagealign_alloc closeout strdup canonicalize getlogin_r stat-macros quotearg
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4 --aux-dir=build-aux   alloca alloca-opt allocsa atexit canonicalize chdir-long closeout cycle-check dirname dup2 error exit exitfail extensions filenamecat fnmatch fnmatch-posix fpending ftruncate getcwd getdate gethostname getline getlogin_r getndelim2 getnline getopt getpagesize getpass-gnu gettext gettime gettimeofday lstat malloc md5 memmove mempcpy memrchr minmax mkdir mkstemp mktime nanosleep openat pagealign_alloc pathmax quotearg readlink realloc regex rename restrict rpmatch save-cwd setenv stat-macros stdbool stdint strcase strdup strerror strftime strstr strtol strtoul time_r timespec tzset unistd-safer unlocked-io vasnprintf vasprintf xalloc xalloc-die xgetcwd xgethostname xreadlink xsize yesno
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4 --aux-dir=build-aux   alloca alloca-opt allocsa atexit canonicalize chdir-long closeout cycle-check dirname dup2 error exit exitfail extensions filenamecat fnmatch fnmatch-posix fpending ftruncate getcwd getdate getdelim gethostname getline getlogin_r getndelim2 getnline getopt getpagesize getpass-gnu gettext gettext-h gettime gettimeofday lstat malloc md5 memmove mempcpy memrchr minmax mkdir mkstemp mktime nanosleep openat pagealign_alloc pathmax quotearg readlink realloc regex rename restrict rpmatch save-cwd setenv size_max stat-macros stdbool stdint strcase strdup strerror strftime strstr strtol strtoul time_r timespec tzset unistd-safer unlocked-io vasnprintf vasprintf xalloc xalloc-die xgetcwd xgethostname xreadlink xsize yesno
 
 AC_DEFUN([gl_EARLY],
 [
@@ -36,8 +36,9 @@ AC_DEFUN([gl_INIT],
   gl_FUNC_FTRUNCATE
   gl_FUNC_GETCWD
   gl_GETDATE
+  gl_FUNC_GETDELIM
   gl_FUNC_GETHOSTNAME
-  AM_FUNC_GETLINE
+  gl_FUNC_GETLINE
   gl_GETLOGIN_R
   gl_GETNDELIM2
   gl_GETNLINE
@@ -70,6 +71,7 @@ AC_DEFUN([gl_INIT],
   gl_FUNC_RPMATCH
   gl_SAVE_CWD
   gt_FUNC_SETENV
+  gl_SIZE_MAX
   gl_STAT_MACROS
   AM_STDBOOL_H
   gl_STDINT_H
@@ -96,6 +98,9 @@ AC_DEFUN([gl_INIT],
 
 dnl Usage: gl_MODULES(module1 module2 ...)
 AC_DEFUN([gl_MODULES], [])
+
+dnl Usage: gl_AVOID(module1 module2 ...)
+AC_DEFUN([gl_AVOID], [])
 
 dnl Usage: gl_SOURCE_BASE(DIR)
 AC_DEFUN([gl_SOURCE_BASE], [])
