@@ -1,4 +1,4 @@
-# unistd-safer.m4 serial 3
+#serial 4
 dnl Copyright (C) 2002, 2005 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
@@ -16,7 +16,7 @@ AC_DEFUN([gl_UNISTD_SAFER],
 
 # Prerequisites of lib/dup-safer.c.
 AC_DEFUN([gl_PREREQ_DUP_SAFER], [
-  AC_CHECK_HEADERS_ONCE(fcntl.h unistd.h)
+  AC_CHECK_HEADERS_ONCE(unistd.h)
 ])
 
 # Prerequisites of lib/fd-safer.c.
